--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.9",
